# esp32-slb9670-tpm2-tss

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/tpm2_esp_lib/: CMakeLists.txt
components/tpm2_esp_lib/include/tss2/: tss2_esys.h  tss2_fapi.h  tss2_mu.h  tss2_policy.h  tss2_rc.h  tss2_sys.h  tss2_tcti.h  tss2_tcti_cmd.h  tss2_tcti_device.h  tss2_tcti_i2c_ftdi.h  tss2_tcti_i2c_helper.h  tss2_tcti_libtpms.h  tss2_tcti_mssim.h  tss2_tcti_pcap.h  tss2_tcti_spi_ftdi.h  tss2_tcti_spi_helper.h  tss2_tcti_spi_ltt2go.h  tss2_tcti_swtpm.h  tss2_tcti_tbs.h  tss2_tctildr.h  tss2_tpm2_types.h
components/tpm2_esp_lib/src/tss2-mu/: tpmu-types.c
components/tpm2_esp_lib/src/tss2-sys/api/: Tss2_Sys_Execute.c
components/tpm2_esp_lib/src/tss2-tcti/: tcti-spi-esp32.c  tcti-spi-esp32.h  tcti-spi-helper.c
components/tpm2_esp_lib/src/util/: aux_util.h  io.c  io.h  log.h
main/: main.c
