
list(APPEND srcs "tpm2_tss.c")

list(APPEND include_dirs	include 
							include/tss2
							src
							src/util
							src/tss2-sys
							)
list(APPEND srcs 	"src/util/io.c"
					"src/util/log.c"
					"src/util/key-value-parse.c"
					)

list(APPEND srcs 	"src/tss2-sys/api/Tss2_Sys_ActivateCredential.c"
					"src/tss2-sys/api/Tss2_Sys_ACT_SetTimeout.c"
					"src/tss2-sys/api/Tss2_Sys_AC_GetCapability.c"
					"src/tss2-sys/api/Tss2_Sys_AC_Send.c"
					"src/tss2-sys/api/Tss2_Sys_Certify.c"
					"src/tss2-sys/api/Tss2_Sys_CertifyCreation.c"
					"src/tss2-sys/api/Tss2_Sys_CertifyX509.c"
					"src/tss2-sys/api/Tss2_Sys_ChangeEPS.c"
					"src/tss2-sys/api/Tss2_Sys_ChangePPS.c"
					"src/tss2-sys/api/Tss2_Sys_Clear.c"
					"src/tss2-sys/api/Tss2_Sys_ClearControl.c"
					"src/tss2-sys/api/Tss2_Sys_ClockRateAdjust.c"
					"src/tss2-sys/api/Tss2_Sys_ClockSet.c"
					"src/tss2-sys/api/Tss2_Sys_Commit.c"
					"src/tss2-sys/api/Tss2_Sys_ContextLoad.c"
					"src/tss2-sys/api/Tss2_Sys_ContextSave.c"
					"src/tss2-sys/api/Tss2_Sys_Create.c"
					"src/tss2-sys/api/Tss2_Sys_CreateLoaded.c"
					"src/tss2-sys/api/Tss2_Sys_CreatePrimary.c"
					"src/tss2-sys/api/Tss2_Sys_DictionaryAttackLockReset.c"
					"src/tss2-sys/api/Tss2_Sys_DictionaryAttackParameters.c"
					"src/tss2-sys/api/Tss2_Sys_Duplicate.c"
					"src/tss2-sys/api/Tss2_Sys_ECC_Parameters.c"
					"src/tss2-sys/api/Tss2_Sys_ECDH_KeyGen.c"
					"src/tss2-sys/api/Tss2_Sys_ECDH_ZGen.c"
					"src/tss2-sys/api/Tss2_Sys_EC_Ephemeral.c"
					"src/tss2-sys/api/Tss2_Sys_EncryptDecrypt.c"
					"src/tss2-sys/api/Tss2_Sys_EncryptDecrypt2.c"
					"src/tss2-sys/api/Tss2_Sys_EventSequenceComplete.c"
					"src/tss2-sys/api/Tss2_Sys_EvictControl.c"
					"src/tss2-sys/api/Tss2_Sys_Execute.c"
					"src/tss2-sys/api/Tss2_Sys_FieldUpgradeData.c"
					"src/tss2-sys/api/Tss2_Sys_FieldUpgradeStart.c"
					"src/tss2-sys/api/Tss2_Sys_Finalize.c"
					"src/tss2-sys/api/Tss2_Sys_FirmwareRead.c"
					"src/tss2-sys/api/Tss2_Sys_FlushContext.c"
					"src/tss2-sys/api/Tss2_Sys_GetCapability.c"
					"src/tss2-sys/api/Tss2_Sys_GetCommandAuditDigest.c"
					"src/tss2-sys/api/Tss2_Sys_GetCommandCode.c"
					"src/tss2-sys/api/Tss2_Sys_GetContextSize.c"
					"src/tss2-sys/api/Tss2_Sys_GetCpBuffer.c"
					"src/tss2-sys/api/Tss2_Sys_GetDecryptParam.c"
					"src/tss2-sys/api/Tss2_Sys_GetEncryptParam.c"
					"src/tss2-sys/api/Tss2_Sys_GetRandom.c"
					"src/tss2-sys/api/Tss2_Sys_GetRpBuffer.c"
					"src/tss2-sys/api/Tss2_Sys_GetRspAuths.c"
					"src/tss2-sys/api/Tss2_Sys_GetSessionAuditDigest.c"
					"src/tss2-sys/api/Tss2_Sys_GetTctiContext.c"
					"src/tss2-sys/api/Tss2_Sys_GetTestResult.c"
					"src/tss2-sys/api/Tss2_Sys_GetTime.c"
					"src/tss2-sys/api/Tss2_Sys_Hash.c"
					"src/tss2-sys/api/Tss2_Sys_HashSequenceStart.c"
					"src/tss2-sys/api/Tss2_Sys_HierarchyChangeAuth.c"
					"src/tss2-sys/api/Tss2_Sys_HierarchyControl.c"
					"src/tss2-sys/api/Tss2_Sys_HMAC.c"
					"src/tss2-sys/api/Tss2_Sys_HMAC_Start.c"
					"src/tss2-sys/api/Tss2_Sys_Import.c"
					"src/tss2-sys/api/Tss2_Sys_IncrementalSelfTest.c"
					"src/tss2-sys/api/Tss2_Sys_Initialize.c"
					"src/tss2-sys/api/Tss2_Sys_Load.c"
					"src/tss2-sys/api/Tss2_Sys_LoadExternal.c"
					"src/tss2-sys/api/Tss2_Sys_MAC.c"
					"src/tss2-sys/api/Tss2_Sys_MAC_Start.c"
					"src/tss2-sys/api/Tss2_Sys_MakeCredential.c"
					"src/tss2-sys/api/Tss2_Sys_NV_Certify.c"
					"src/tss2-sys/api/Tss2_Sys_NV_ChangeAuth.c"
					"src/tss2-sys/api/Tss2_Sys_NV_DefineSpace.c"
					"src/tss2-sys/api/Tss2_Sys_NV_Extend.c"
					"src/tss2-sys/api/Tss2_Sys_NV_GlobalWriteLock.c"
					"src/tss2-sys/api/Tss2_Sys_NV_Increment.c"
					"src/tss2-sys/api/Tss2_Sys_NV_Read.c"
					"src/tss2-sys/api/Tss2_Sys_NV_ReadLock.c"
					"src/tss2-sys/api/Tss2_Sys_NV_ReadPublic.c"
					"src/tss2-sys/api/Tss2_Sys_NV_SetBits.c"
					"src/tss2-sys/api/Tss2_Sys_NV_UndefineSpace.c"
					"src/tss2-sys/api/Tss2_Sys_NV_UndefineSpaceSpecial.c"
					"src/tss2-sys/api/Tss2_Sys_NV_Write.c"
					"src/tss2-sys/api/Tss2_Sys_NV_WriteLock.c"
					"src/tss2-sys/api/Tss2_Sys_ObjectChangeAuth.c"
					"src/tss2-sys/api/Tss2_Sys_PCR_Allocate.c"
					"src/tss2-sys/api/Tss2_Sys_PCR_Event.c"
					"src/tss2-sys/api/Tss2_Sys_PCR_Extend.c"
					"src/tss2-sys/api/Tss2_Sys_PCR_Read.c"
					"src/tss2-sys/api/Tss2_Sys_PCR_Reset.c"
					"src/tss2-sys/api/Tss2_Sys_PCR_SetAuthPolicy.c"
					"src/tss2-sys/api/Tss2_Sys_PCR_SetAuthValue.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyAuthorize.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyAuthorizeNV.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyAuthValue.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyCommandCode.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyCounterTimer.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyCpHash.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyDuplicationSelect.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyGetDigest.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyLocality.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyNameHash.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyNV.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyNvWritten.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyOR.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyPassword.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyPCR.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyPhysicalPresence.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyRestart.c"
					"src/tss2-sys/api/Tss2_Sys_PolicySecret.c"
					"src/tss2-sys/api/Tss2_Sys_PolicySigned.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyTemplate.c"
					"src/tss2-sys/api/Tss2_Sys_PolicyTicket.c"
					"src/tss2-sys/api/Tss2_Sys_Policy_AC_SendSelect.c"
					"src/tss2-sys/api/Tss2_Sys_PP_Commands.c"
					"src/tss2-sys/api/Tss2_Sys_Quote.c"
					"src/tss2-sys/api/Tss2_Sys_ReadClock.c"
					"src/tss2-sys/api/Tss2_Sys_ReadPublic.c"
					"src/tss2-sys/api/Tss2_Sys_Rewrap.c"
					"src/tss2-sys/api/Tss2_Sys_RSA_Decrypt.c"
					"src/tss2-sys/api/Tss2_Sys_RSA_Encrypt.c"
					"src/tss2-sys/api/Tss2_Sys_SelfTest.c"
					"src/tss2-sys/api/Tss2_Sys_SequenceComplete.c"
					"src/tss2-sys/api/Tss2_Sys_SequenceUpdate.c"
					"src/tss2-sys/api/Tss2_Sys_SetAlgorithmSet.c"
					"src/tss2-sys/api/Tss2_Sys_SetCmdAuths.c"
					"src/tss2-sys/api/Tss2_Sys_SetCommandCodeAuditStatus.c"
					"src/tss2-sys/api/Tss2_Sys_SetDecryptParam.c"
					"src/tss2-sys/api/Tss2_Sys_SetEncryptParam.c"
					"src/tss2-sys/api/Tss2_Sys_SetPrimaryPolicy.c"
					"src/tss2-sys/api/Tss2_Sys_Shutdown.c"
					"src/tss2-sys/api/Tss2_Sys_Sign.c"
					"src/tss2-sys/api/Tss2_Sys_StartAuthSession.c"
					"src/tss2-sys/api/Tss2_Sys_Startup.c"
					"src/tss2-sys/api/Tss2_Sys_StirRandom.c"
					"src/tss2-sys/api/Tss2_Sys_TestParms.c"
					"src/tss2-sys/api/Tss2_Sys_Unseal.c"
					"src/tss2-sys/api/Tss2_Sys_Vendor_TCG_Test.c"
					"src/tss2-sys/api/Tss2_Sys_VerifySignature.c"
					"src/tss2-sys/api/Tss2_Sys_ZGen_2Phase.c"
					"src/tss2-sys/sysapi_util.c"
)

list(APPEND include_dirs	src/tss2-tcti
							src/tss2-tcti/mpsse
)

list(APPEND srcs 	"src/tss2-tcti/tcti-spi-esp32.c"
					"src/tss2-tcti/tcti-spi-helper.c"
					"src/tss2-tcti/tcti-common.c"
)

list(APPEND srcs 	"src/tss2-mu/base-types.c"
					"src/tss2-mu/tpm2b-types.c"
					"src/tss2-mu/tpma-types.c"
					"src/tss2-mu/tpml-types.c"
					"src/tss2-mu/tpms-types.c"
					"src/tss2-mu/tpmt-types.c"
					"src/tss2-mu/tpmu-types.c"
					)


idf_component_register(	SRCS "${srcs}"
                    	INCLUDE_DIRS "${include_dirs}"
                    	REQUIRES driver esp_timer
                    	)

